@@ -1,5 +1,11 @@
 $Id$
 
+2016-09-07  Christian Franke  <franke@computer.org>
+
+	os_win32/smartd_mailer.ps1: Use domainname for default sender address.
+	os_win32/smartd_mailer.conf.sample.ps1: Update related comment.
+	os_win32/smartd_warning.cmd: Remove trailing '\r' from USERDNSDOMAIN.
+
 2016-08-28  Christian Franke  <franke@computer.org>
 
 	os_win32/installer.nsi: Fix quoting of EDITOR shortcuts.
